gen/Main/java/antlr/Jinja2Parser.java
// Generated from C:/Users/laith/IdeaProjects/python_flask_compiler/src/Main/java/antlr/Jinja2Parser.g4 by ANTLR 4.13.2
package Main.java.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Jinja2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HTML_TEXT=1, OPEN_VAR=2, OPEN_BLOCK=3, OPEN_COMMENT=4, C_TEXT=5, C_END=6, 
		V_END=7, V_ID=8, V_DOT=9, V_PIPE=10, V_LPAREN=11, V_RPAREN=12, V_COMMA=13, 
		V_ASSIGN=14, V_PLUS=15, V_MINUS=16, V_MULT=17, V_DIV=18, V_MOD=19, V_EQ=20, 
		V_NE=21, V_LT=22, V_GT=23, V_LE=24, V_GE=25, V_AND=26, V_OR=27, V_NOT=28, 
		V_STRING=29, V_NUMBER=30, V_IN=31, V_IS=32, V_WS=33, B_END=34, B_IF=35, 
		B_ELSE=36, B_ELIF=37, B_ENDIF=38, B_FOR=39, B_IN=40, B_ENDFOR=41, B_BLOCK=42, 
		B_ENDBLOCK=43, B_EXTENDS=44, B_INCLUDE=45, B_IMPORT=46, B_FROM=47, B_MACRO=48, 
		B_ENDMACRO=49, B_SET=50, B_WITH=51, B_ENDWITH=52, B_IS=53, B_ID=54, B_DOT=55, 
		B_LPAREN=56, B_RPAREN=57, B_COMMA=58, B_ASSIGN=59, B_PLUS=60, B_MINUS=61, 
		B_MULT=62, B_DIV=63, B_MOD=64, B_EQ=65, B_NE=66, B_LT=67, B_GT=68, B_LE=69, 
		B_GE=70, B_AND=71, B_OR=72, B_NOT=73, B_STRING=74, B_NUMBER=75, B_WS=76;
	public static final int
		RULE_document = 0, RULE_element = 1, RULE_html_text = 2, RULE_comment = 3, 
		RULE_variable = 4, RULE_filter = 5, RULE_filter_arguments = 6, RULE_filter_argument = 7, 
		RULE_block = 8, RULE_if_block = 9, RULE_elif_block = 10, RULE_else_block = 11, 
		RULE_for_block = 12, RULE_block_tag = 13, RULE_extends_block = 14, RULE_include_block = 15, 
		RULE_set_block = 16, RULE_with_block = 17, RULE_simple_block = 18, RULE_condition = 19, 
		RULE_expression = 20, RULE_logical_or = 21, RULE_logical_and = 22, RULE_equality = 23, 
		RULE_comparison = 24, RULE_term = 25, RULE_factor = 26, RULE_unary = 27, 
		RULE_primary = 28, RULE_function_call = 29, RULE_call_arguments = 30, 
		RULE_call_argument = 31, RULE_identifier = 32, RULE_literal = 33, RULE_string_literal = 34, 
		RULE_assignment = 35, RULE_assignments = 36, RULE_inner_content = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "element", "html_text", "comment", "variable", "filter", 
			"filter_arguments", "filter_argument", "block", "if_block", "elif_block", 
			"else_block", "for_block", "block_tag", "extends_block", "include_block", 
			"set_block", "with_block", "simple_block", "condition", "expression", 
			"logical_or", "logical_and", "equality", "comparison", "term", "factor", 
			"unary", "primary", "function_call", "call_arguments", "call_argument", 
			"identifier", "literal", "string_literal", "assignment", "assignments", 
			"inner_content"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'{{'", "'{%'", "'{#'", null, "'#}'", "'}}'", null, null, 
			"'|'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'%}'", "'if'", "'else'", "'elif'", "'endif'", "'for'", null, "'endfor'", 
			"'block'", "'endblock'", "'extends'", "'include'", "'import'", "'from'", 
			"'macro'", "'endmacro'", "'set'", "'with'", "'endwith'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HTML_TEXT", "OPEN_VAR", "OPEN_BLOCK", "OPEN_COMMENT", "C_TEXT", 
			"C_END", "V_END", "V_ID", "V_DOT", "V_PIPE", "V_LPAREN", "V_RPAREN", 
			"V_COMMA", "V_ASSIGN", "V_PLUS", "V_MINUS", "V_MULT", "V_DIV", "V_MOD", 
			"V_EQ", "V_NE", "V_LT", "V_GT", "V_LE", "V_GE", "V_AND", "V_OR", "V_NOT", 
			"V_STRING", "V_NUMBER", "V_IN", "V_IS", "V_WS", "B_END", "B_IF", "B_ELSE", 
			"B_ELIF", "B_ENDIF", "B_FOR", "B_IN", "B_ENDFOR", "B_BLOCK", "B_ENDBLOCK", 
			"B_EXTENDS", "B_INCLUDE", "B_IMPORT", "B_FROM", "B_MACRO", "B_ENDMACRO", 
			"B_SET", "B_WITH", "B_ENDWITH", "B_IS", "B_ID", "B_DOT", "B_LPAREN", 
			"B_RPAREN", "B_COMMA", "B_ASSIGN", "B_PLUS", "B_MINUS", "B_MULT", "B_DIV", 
			"B_MOD", "B_EQ", "B_NE", "B_LT", "B_GT", "B_LE", "B_GE", "B_AND", "B_OR", 
			"B_NOT", "B_STRING", "B_NUMBER", "B_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jinja2Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Jinja2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Jinja2Parser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
				{
				{
				setState(76);
				element();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public Html_textContext html_text() {
			return getRuleContext(Html_textContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HTML_TEXT:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				html_text();
				}
				break;
			case OPEN_VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				variable();
				}
				break;
			case OPEN_BLOCK:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				block();
				}
				break;
			case OPEN_COMMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				comment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Html_textContext extends ParserRuleContext {
		public TerminalNode HTML_TEXT() { return getToken(Jinja2Parser.HTML_TEXT, 0); }
		public Html_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterHtml_text(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitHtml_text(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitHtml_text(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Html_textContext html_text() throws RecognitionException {
		Html_textContext _localctx = new Html_textContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_html_text);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(HTML_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentContext extends ParserRuleContext {
		public TerminalNode OPEN_COMMENT() { return getToken(Jinja2Parser.OPEN_COMMENT, 0); }
		public TerminalNode C_END() { return getToken(Jinja2Parser.C_END, 0); }
		public List<TerminalNode> C_TEXT() { return getTokens(Jinja2Parser.C_TEXT); }
		public TerminalNode C_TEXT(int i) {
			return getToken(Jinja2Parser.C_TEXT, i);
		}
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(OPEN_COMMENT);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==C_TEXT) {
				{
				{
				setState(93);
				match(C_TEXT);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(C_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TerminalNode OPEN_VAR() { return getToken(Jinja2Parser.OPEN_VAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode V_END() { return getToken(Jinja2Parser.V_END, 0); }
		public List<TerminalNode> V_PIPE() { return getTokens(Jinja2Parser.V_PIPE); }
		public TerminalNode V_PIPE(int i) {
			return getToken(Jinja2Parser.V_PIPE, i);
		}
		public List<FilterContext> filter() {
			return getRuleContexts(FilterContext.class);
		}
		public FilterContext filter(int i) {
			return getRuleContext(FilterContext.class,i);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(OPEN_VAR);
			setState(102);
			expression();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==V_PIPE) {
				{
				{
				setState(103);
				match(V_PIPE);
				setState(104);
				filter();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(V_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FilterContext extends ParserRuleContext {
		public TerminalNode V_ID() { return getToken(Jinja2Parser.V_ID, 0); }
		public TerminalNode V_LPAREN() { return getToken(Jinja2Parser.V_LPAREN, 0); }
		public TerminalNode V_RPAREN() { return getToken(Jinja2Parser.V_RPAREN, 0); }
		public Filter_argumentsContext filter_arguments() {
			return getRuleContext(Filter_argumentsContext.class,0);
		}
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitFilter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitFilter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_filter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(V_ID);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==V_LPAREN) {
				{
				setState(113);
				match(V_LPAREN);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1879148800L) != 0)) {
					{
					setState(114);
					filter_arguments();
					}
				}

				setState(117);
				match(V_RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Filter_argumentsContext extends ParserRuleContext {
		public List<Filter_argumentContext> filter_argument() {
			return getRuleContexts(Filter_argumentContext.class);
		}
		public Filter_argumentContext filter_argument(int i) {
			return getRuleContext(Filter_argumentContext.class,i);
		}
		public List<TerminalNode> V_COMMA() { return getTokens(Jinja2Parser.V_COMMA); }
		public TerminalNode V_COMMA(int i) {
			return getToken(Jinja2Parser.V_COMMA, i);
		}
		public Filter_argumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterFilter_arguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitFilter_arguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitFilter_arguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Filter_argumentsContext filter_arguments() throws RecognitionException {
		Filter_argumentsContext _localctx = new Filter_argumentsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_filter_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			filter_argument();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==V_COMMA) {
				{
				{
				setState(121);
				match(V_COMMA);
				setState(122);
				filter_argument();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Filter_argumentContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode V_ID() { return getToken(Jinja2Parser.V_ID, 0); }
		public TerminalNode V_ASSIGN() { return getToken(Jinja2Parser.V_ASSIGN, 0); }
		public Filter_argumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterFilter_argument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitFilter_argument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitFilter_argument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Filter_argumentContext filter_argument() throws RecognitionException {
		Filter_argumentContext _localctx = new Filter_argumentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_filter_argument);
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(V_ID);
				setState(130);
				match(V_ASSIGN);
				setState(131);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public If_blockContext if_block() {
			return getRuleContext(If_blockContext.class,0);
		}
		public For_blockContext for_block() {
			return getRuleContext(For_blockContext.class,0);
		}
		public Block_tagContext block_tag() {
			return getRuleContext(Block_tagContext.class,0);
		}
		public Extends_blockContext extends_block() {
			return getRuleContext(Extends_blockContext.class,0);
		}
		public Include_blockContext include_block() {
			return getRuleContext(Include_blockContext.class,0);
		}
		public Set_blockContext set_block() {
			return getRuleContext(Set_blockContext.class,0);
		}
		public With_blockContext with_block() {
			return getRuleContext(With_blockContext.class,0);
		}
		public Simple_blockContext simple_block() {
			return getRuleContext(Simple_blockContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		try {
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				if_block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				for_block();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				block_tag();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				extends_block();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(138);
				include_block();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(139);
				set_block();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(140);
				with_block();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(141);
				simple_block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_blockContext extends ParserRuleContext {
		public List<TerminalNode> OPEN_BLOCK() { return getTokens(Jinja2Parser.OPEN_BLOCK); }
		public TerminalNode OPEN_BLOCK(int i) {
			return getToken(Jinja2Parser.OPEN_BLOCK, i);
		}
		public TerminalNode B_IF() { return getToken(Jinja2Parser.B_IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<TerminalNode> B_END() { return getTokens(Jinja2Parser.B_END); }
		public TerminalNode B_END(int i) {
			return getToken(Jinja2Parser.B_END, i);
		}
		public TerminalNode B_ENDIF() { return getToken(Jinja2Parser.B_ENDIF, 0); }
		public Inner_contentContext inner_content() {
			return getRuleContext(Inner_contentContext.class,0);
		}
		public List<Elif_blockContext> elif_block() {
			return getRuleContexts(Elif_blockContext.class);
		}
		public Elif_blockContext elif_block(int i) {
			return getRuleContext(Elif_blockContext.class,i);
		}
		public Else_blockContext else_block() {
			return getRuleContext(Else_blockContext.class,0);
		}
		public If_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).enterIf_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2ParserListener ) ((Jinja2ParserListener)listener).exitIf_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2ParserVisitor ) return ((Jinja2ParserVisitor<? extends T>)visitor).visitIf_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_blockContext if_block() throws RecognitionException {
		If_blockContext _localctx = new If_blockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_if_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(OPEN_BLOCK);
			setState(145);
			match(B_IF);
			setState(146);
			condition();
			setState(147);
			match(B_END);
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(148);
				inner_content();
				}
				break;
			}
			setState(154);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(151);
					elif_block();
					}
					} 
				}
				setState(156);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(157);
				else_block();
				}
				break;
			}
			setState(160);
			match(OPEN_BLOCK);
			setState(161);
			match(B_ENDIF);
			setState(162);
			match(B_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
